--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <div>
             <h1>Choose your Quiz</h1>
+            <h2>Choose number of participants</h2>
         </div>
         <div>
             Choose your players
