json promise update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id="chooseGame" class="container-fluid d-none">
         <h1>Alege un joc:</h1>
 
-        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal">
+        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal" id="quizShow">
           <a href="#game">
             <div class="card-body">
               <h5 class="card-title">Quiz show</h5>
@@ -43,7 +43,7 @@
             </div>
           </a>
         </div>
-        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal">
+        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal" id="debatable">
           <a href="#game">
             <div class="card-body">
               <h5 class="card-title">Debatable</h5>
@@ -51,7 +51,7 @@
             </div>
           </a>
         </div>  
-        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal">
+        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal" id="cineAr">
           <a href="#game">
             <div class="card-body">
               <h5 class="card-title">Cine ar ...</h5>
@@ -59,7 +59,7 @@
             </div>
           </a>  
         </div>
-        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal">
+        <div class="card" data-mdb-toggle="modal" data-mdb-target="#cardModal" id="generalCulture">
           <a href="#game">
             <div class="card-body">
               <h5 class="card-title">Quiz de cultură generală</h5>
