--- a/index.html
+++ b/index.html
@@ -89,15 +89,12 @@
       
       <div id="game" class="d-none">
         <h2>Răspunde: </h2>
-        <h1>Ana</h1>
+        <h1 id="numeJucator">Ana</h1>
         <div class="card">
           <div class="card-body">
             <p class="card-text" id="question">Care este cea mai faimoasă persoană pe care ai cunoscut-o vreodată?</p>
           </div>
-          <div id="like-dislike" class="d-none">
-            <button type="button" class="btn btn-light" data-mdb-ripple-color="dark" id="likeBtn">Like</button>
-            <button type="button" class="btn btn-light" data-mdb-ripple-color="dark" id="dislikeBtn">Dislike</button> 
-          </div>
+          
           <div id="nextBtn" class="d-none">
             <button type="button" class="btn btn-light" data-mdb-ripple-color="dark" id="next">Urmatorul jucator</button>
           </div>
@@ -113,5 +110,6 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script src="js\script.js"></script>
+    <script src="js\quiz.js"></script>
   </body>
 </html>
