update html, css and js functions

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <div class="card">
           <div class="card-body">
             <p class="card-text" id="question">Care este cea mai faimoasă persoană pe care ai cunoscut-o vreodată?</p>
+            <i class="fa-solid fa-circle-question fa-2x d-none" id="answer"></i>
           </div>
           
           <div id="nextBtn" class="d-none">
